<resources>
    <string name="app_name">Blindspot</string>
    <string name="txtNome">Nome:</string>
    <string name="txtEmail">Email:</string>
    <string name="txtSenha">Senha:</string>
    <string name="txtEsqSenha">Esqueceu sua senha?</string>
    <string name="txtCriarConta">Não possui conta? Crie uma</string>
    <string name="txtLogin">LOGIN</string>
    <string name="txtCadastro">CADASTRO</string>
    <string name="txtTCnome">Nome:</string>
    <string name="txtTCEmail">Email:</string>
    <string name="txtTCSenha">Senha:</string>
    <string name="txtTCConfirSenha">Confirme sua senha:</string>
    <string name="txtTCPossuiLog">Já possui uma conta? Login</string>
    <string name="txtBlindSpot">Blindspot</string>
    <string name="txtTCPcabeçalho">Aventure-se nos<br> casos!</br></string>
    <string name="btnExplore">EXPLORE</string>
    <string name="txt_casos_solucionados">Casos Solucionados</string>
    <string name="title_activity_main2">Leanback MainActivity2</string>
    <string name="browse_title">Videos by Your Company</string>
    <string name="related_movies">Related Videos</string>
    <string name="grid_view">Grid View</string>
    <string name="error_fragment">Error Fragment</string>
    <string name="personal_settings">Personal Settings</string>
    <string name="watch_trailer_1">Watch trailer</string>
    <string name="watch_trailer_2">FREE</string>
    <string name="rent_1">Rent By Day</string>
    <string name="rent_2">From $1.99</string>
    <string name="buy_1">Buy and Own</string>
    <string name="buy_2">AT $9.99</string>
    <string name="movie">Movie</string>

    <!-- Error messages -->
    <string name="error_fragment_message">An error occurred</string>
    <string name="dismiss_error">Dismiss</string>
    <string name="txt_recente">Recente</string>
    <string name="title_activity_casosnaoresolvidos">activity_casosnaoresolvidos</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="txt_casos_n_solucionados">Casos não solucionados</string>
    <string name="txt_arquivados">Arquivados</string>
    <string name="text_perfil">Perfil</string>
    <string name="txt_name_profile">Mônica Sousa Silva</string>
    <string name="email_cabecalho_profile">monicasilva@gmail.com</string>
    <string name="nome_profile">Nome</string>
    <string name="txt_emailprofile">Email</string>
    <string name="txt_senhaprofile">Senha</string>
    <string name="editar_perfil_profile">Editar perfil</string>
    <string name="valor_senha_profile">*********************</string>
    <string name="txt_nome_profile">Mônica Sousa Silva</string>
    <string name="txt_valor_email_profile">monicasilva@gmail.com</string>
    <string name="txt_saibamais_personagens">Saiba mais sobre eles!</string>
    <string name="text_loc_ecs">LOCALIZAÇÃO DO CRIME</string>
</resources>